# ksef-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ksef-client/: Cargo.toml  README.md
crates/ksef-client/src/: lib.rs
crates/ksef-invoice-generator/: Cargo.toml
crates/ksef-invoice-generator/src/: lib.rs
crates/mcp-protocol/: Cargo.toml  README.md
crates/mcp-protocol/src/: lib.rs
docs/: API.md  CONFIGURATION.md  USAGE.md
src/: main.rs
