[package]
name = "ksef-mcp-server"
version.workspace = true
edition.workspace = true
authors = ["Flippico Sp. z o.o."]
description = "MCP server for the Polish e-invoicing system KSeF (Krajowy System e-Faktur)"
license = "MIT"
repository = "https://github.com/Flippico/ksef-mcp"
homepage = "https://github.com/Flippico/ksef-mcp"
documentation = "https://github.com/Flippico/ksef-mcp/blob/main/doc/USAGE.md"
readme = "README.md"
keywords = ["mcp", "ksef", "invoicing", "poland", "e-invoicing"]
categories = ["api-bindings", "command-line-utilities"]

[[bin]]
name = "ksef-mcp"
path = "src/main.rs"

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }
ksef-client = { path = "../ksef-client" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
