[package]
name = "ksef-client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
x509-parser = "0.16"
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["std"] }
